[package]
name = "geoip"
version = "0.3.0"
authors = ["Tomohisa Oda <linyows@gmail.com>"]
homepage = "https://github.com/linyows/geoip"
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/linyows/geoip"
description = "Get country and city by IP Address with MaxmindDB as CLI."

[dependencies]
maxminddb = "0.12.0"
reqwest = "0.9.8"
libflate = "0.1.19"
clap = "2.32"
